# prompt-polish

./: CHANGELOG.md  FABLE5_PROMPT.md  PROOF-AGY.md  PROOF-claude.md  PROOF-codex.md  README.md  install.sh  polish  polish.py  pyproject.toml  test_polish.py
.github/workflows/: ci.yml
adapters/: AGY_GEMINI.md  AGY_GEMINI.md.example  polish-hook.py
prompt_polish/: __init__.py
