[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-polish"
version = "0.1.0"
description = "AI prompt polishing tool with English vocabulary learning — for non-native speakers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Semih Mutlu", email = "semih.mutlu@selambuarada.com"},
]
keywords = ["prompt", "english", "learning", "claude", "codex", "agi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/SemihMutlu07/prompt-polish"
Repository = "https://github.com/SemihMutlu07/prompt-polish"
BugTracker = "https://github.com/SemihMutlu07/prompt-polish/issues"

[project.scripts]
polish = "polish:main"

[project.optional-dependencies]
dev = []
